#257: fixed review findings